<resources>
    <string name="app_name">The Painting Assistant</string>
    <string name="author">Jonathan Espinal</string>
    <string name="version">Version 1.0</string>

    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>

    <string name="library_activity_heading">Library</string>
    <string name="library_add_project_button">Add New Project</string>

    <string name="add_project_name">Project Name</string>
    <string name="add_project_description">Description</string>
    <string name="add_project_notes">Notes</string>
    <string name="add_project_add_thumbnail_button">Add Photo</string>

    <string name="menu_library">Library</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_about">About</string>

    <string name="preference_dark_mode">Dark Mode</string>
    <string name="preference_dark_mode_summary">Toggle between light/dark mode theme across entire the application</string>
    <string name="preference_font_size">Notes Font Size</string>
    <string name="preference_font_size_summary">Changes the size of the notes text on the project page (Default: 18)</string>
    <string name="preference_category">UI Settings</string>

    <string name="project_details_notes">Notes</string>
    <string name="project_details_add_photo_button">Add Photo To Gallery</string>

</resources>