<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_category">

        <EditTextPreference
            android:defaultValue="18"
            android:key="preference_font_size"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_font_size"
            app:enableCopying="false"
            app:summary="@string/preference_font_size_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="dark_mode_preference"
            android:title="@string/preference_dark_mode"
            app:summary="@string/preference_dark_mode_summary" />
    </PreferenceCategory>
</PreferenceScreen>