<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInfoActivity">

    <TextView
        android:id="@+id/textViewAppInfoTitle"
        style="@style/MediumHeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAppInfoAuthor"
        style="@style/MediumRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="@+id/textViewAppInfoTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppInfoTitle" />

    <TextView
        android:id="@+id/textViewAppInfoVersion"
        style="@style/MediumRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/version"
        app:layout_constraintStart_toStartOf="@+id/textViewAppInfoAuthor"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppInfoAuthor" />
</androidx.constraintlayout.widget.ConstraintLayout>