<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProjectActivity">

    <TextView
        android:id="@+id/textViewProjectName"
        style="@style/MediumHeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_project_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/MediumHeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add_project_description"
        app:layout_constraintStart_toStartOf="@+id/textViewProjectName"
        app:layout_constraintTop_toBottomOf="@+id/textViewProjectName" />

    <EditText
        android:id="@+id/editTextProjectNameEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewProjectName"
        app:layout_constraintTop_toTopOf="@+id/textViewProjectName" />

    <EditText
        android:id="@+id/editTextProjectDescriptionEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextProjectNameEntry"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="@+id/editTextProjectNameEntry"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonAddProjectPhoto"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_project_add_thumbnail_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProjectDescriptionEntry" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddProjectPhoto"
        app:srcCompat="@android:drawable/gallery_thumb" />

</androidx.constraintlayout.widget.ConstraintLayout>